--- a/polish-version-calisia-web/program25.html
+++ b/polish-version-calisia-web/program25.html
@@ -133,7 +133,7 @@
                                margin: 0;
                                text-align: left;
                              ">
-                                    09 września 2025 &nbsp;&nbsp;|&nbsp;&nbsp; godz. 17:00
+                                    09 września 2025 &nbsp;&nbsp;|&nbsp;&nbsp; 17:00
                                 </p>
                             </div>
 
@@ -182,7 +182,7 @@
                                margin: 0;
                                text-align: left;
                              ">
-                                    10 września 2025 &nbsp;&nbsp;|&nbsp;&nbsp; godz. 18:00
+                                    10 września 2025 &nbsp;&nbsp;|&nbsp;&nbsp; 18:00
                                 </p>
                             </div>
 
@@ -232,7 +232,7 @@
                                margin: 0;
                                text-align: left;
                              ">
-                                    11 września 2025 &nbsp;&nbsp;|&nbsp;&nbsp; godz. 18:00
+                                    11 września 2025 &nbsp;&nbsp;|&nbsp;&nbsp; 18:00
                                 </p>
                             </div>
 
@@ -283,7 +283,7 @@
                                margin: 0;
                                text-align: left;
                              ">
-                                    12 września 2025 &nbsp;&nbsp;|&nbsp;&nbsp; godz. 18:00 &nbsp;&nbsp;|&nbsp;&nbsp;
+                                    12 września 2025 &nbsp;&nbsp;|&nbsp;&nbsp; 18:00 &nbsp;&nbsp;|&nbsp;&nbsp;
                                     Koncert Finałowy
                                 </p>
                             </div>
