--- a/polish-version-calisia-web/o-festiwalu.html
+++ b/polish-version-calisia-web/o-festiwalu.html
@@ -94,7 +94,7 @@
             <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
                 <h1 class="h1-team">I Kaliski Festiwal Pianistyczny</h1>
             </div>
-            <div class="main-festiwal margin-bez">
+            <div class="main-festiwal margin-bez main-festiwal-new-new">
                 <a href="program.html" class="card">
                     Program
                 </a>
