--- a/rules.html
+++ b/rules.html
@@ -21,6 +21,7 @@
     <!-- Main Stylesheet CSS -->
     <link rel="stylesheet" href="rules.css?id=8">
     <link rel="stylesheet" href="festival.css">
+    <link rel="stylesheet" href="../festival.css">
 
     <!-- SLIDER REVOLUTION 4.x CSS SETTINGS -->
     <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
@@ -94,7 +95,7 @@
         <div class="team-h">
             <h1 class="h1-team"> 1st International Henryk Melcer Piano Competition</h1>
         </div>
-        <div class="main-festiwal margin-bez wynik">
+        <div class="main-festiwal margin-bez wynik main-festiwal-new-new">
             <a href="rules.html" class="card card2">
                 About competition 2023
             </a>
