--- a/polish-version-calisia-web/foto.html
+++ b/polish-version-calisia-web/foto.html
@@ -88,7 +88,7 @@
     <div class="team-h">
       <h1 class="h1-team">Fotorelacja</h1>
   </div>
-  <div class="main-festiwal margin-bez main3">
+  <div class="main-festiwal margin-bez main3 margin-special-group">
       <a href="o-konkursie.html" class="card card2">
           O konkursie 2023
        </a>
