--- a/polish-version-calisia-web/o-konkursie.html
+++ b/polish-version-calisia-web/o-konkursie.html
@@ -96,7 +96,7 @@
             <div class="team-h">
                 <h1 class="h1-team">I Międzynarodowy Konkurs Pianistyczny im. Henryka Melcera</h1>
             </div>
-            <div class="main-festiwal margin-bez wynik main-festiwal-new-new">
+            <div class="main-festiwal margin-bez wynik main-festiwal-new-new margin-special-group">
                 <a href="o-konkursie.html" class="card card2">
                     O konkursie 2023
                 </a>
