--- a/polish-version-calisia-web/jury.html
+++ b/polish-version-calisia-web/jury.html
@@ -91,7 +91,7 @@
                     <h1 class="h1-team">Jury</h1>
                 </div>
 
-                <div class="main-festiwal margin-bez main3">
+                <div class="main-festiwal margin-bez main3 margin-special-group">
                     <a href="o-konkursie.html" class="card card2">
                         O konkursie 2023
                     </a>
