--- a/festival.html
+++ b/festival.html
@@ -99,7 +99,7 @@
         <div class="container-text-photos">
         </div>
 
-        <section class="main-festiwal">
+        <section class="main-festiwal festiwale-dol">
             <div class="kafel-main">
                 <a href="festiwal24.html" class="card" data-aos="fade-up" data-aos-duration="1000">
                     Festival 2024
