--- a/polish-version-calisia-web/program25.html
+++ b/polish-version-calisia-web/program25.html
@@ -103,7 +103,7 @@
                 <a href="o-festiwalu25.html" class="card card2">
                     O festiwalu 2025
                 </a>
-                <a href="artysci25.html" class="card">
+                <a href="artysci25.html" class="card padding-artysci">
                     Artyści
                 </a>
                 <!--<a href="foto-festival25.html" class="card" >
