--- a/program25.html
+++ b/program25.html
@@ -108,7 +108,7 @@
                 <a href="o-festiwalu25.html" class="card card2">
                     About festival 2025
                 </a>
-                <a href="artysci25.html" class="card">
+                <a href="artysci25.html" class="card padding-artysci">
                     Artists
                 </a>
                 <!--<a href="foto-festival25.html" class="card card2">
