--- a/polish-version-calisia-web/team-pl.html
+++ b/polish-version-calisia-web/team-pl.html
@@ -92,15 +92,7 @@
                 </div>
 
 
-                <img class="jury-img mb-5" src="slider-images/logo-black-calisia.png">
-                <div class="label-photo">
-                    Calisia Arts Foundation
-                </div>
-                <!-- Button trigger modal -->
-                <button type="button" class="mb-5 btn btn-secondary" data-bs-toggle="modal"
-                    data-bs-target="#ModalLukasz">
-                    O Fundacji
-                </button>
+                <p style="font-size: 15px; opacity: 80%;"> Fundacja Calisia Arts powstała z inicjatywy artystów, pedagogów i animatorów kultury związanych z Kaliszem. Jej celem jest promocja muzyki klasycznej i poszerzanie oferty kulturalnej Kalisza i Wielkopolski poprzez organizowanie wydarzeń artystycznych o zasięgu krajowym i międzynarodowym. Fundacja Calisia Arts ma swoją siedzibę w Kaliszu, najstarszym polskim mieście, które kojarzone jest z fabryką fortepianów i pianin Calisia. Kalisz słynie także z jednej z nielicznych na świecie szkół kształcących budowniczych, renowatorów i stroicieli fortepianów i pianin Technikum Budowy Fortepianów im. Arnolda Fibigera, naturalnie więc bardzo istotnym aspektem działalności Fundacji jest promowanie muzyki fortepianowej. </br></br> </p>
                 <div class="line">
 
                 </div>
