--- a/team.html
+++ b/team.html
@@ -89,27 +89,7 @@
                 <h1 class="h1-team">Our Team</h1>
             </div>
             <div class="jury-box">
-                <img class="jury-img mb-5" src="slider-images/logo-black-calisia.png">
-                <div class="label-photo">
-                    Calisia Arts Foundation
-                </div>
-                <!-- Button trigger modal -->
-                <button type="button" class="mb-5 btn btn-secondary" data-bs-toggle="modal"
-                    data-bs-target="#ModalLukasz">
-                    Read more about foundation
-                </button>
-                <div class="line">
-
-                </div>
-                <img class="jury-img mb-5" src="slider-images/lukasz-bio-foto.webp">
-                <div class="label-photo">
-                    PhD Łukasz Byrdy
-                </div>
-                <!-- Button trigger modal -->
-                <button type="button" class="mb-5 btn btn-secondary" data-bs-toggle="modal"
-                    data-bs-target="#exampleModal">
-                    Read more - Biography
-                </button>
+                <p style="font-size: 15px; opacity: 80%;"> Calisia Arts foundation was established on the initiative of artists, educators and cultural animators associated with Kalisz. Its aim is to promote classical music and expand the cultural offer of Kalisz and Greater Poland by organising artistic events of national and international scope. The Calisia Arts foundation is based in Kalisz, the oldest Polish city, which is known for the Calisia grand and upright piano factory. Kalisz is also famous for one of the few schools in the world which educates grand and upright piano builders, renovators and tuners, the Arnold Fibiger Piano Building School, so naturally the promotion of piano music is a key aspect of the Foundation’s activities. </br></br> </p>
                 <div class="line">
 
                 </div>
