--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
 
     <div class="about-container">
         <div  class="about-h">
-            <h1 class="h1-about">About Kalisz City</h1>
+            <h1 class="h1-about">Kalisz</h1>
         </div>
         <div class="flex-about-row">
             <div class="about about-left desktop-only">
