--- a/polish-version-calisia-web/o-konkursie.html
+++ b/polish-version-calisia-web/o-konkursie.html
@@ -132,7 +132,7 @@
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-1">
                     <img class="img-kalisz-1 img-kalisz-2" src="../slider-images/gallery1.webp" alt="city, kalisz, view" />
                     <div class="label-photo">
-                        Koncert laureatów w wiedeńskiej Klaviergalerie
+                        Koncert Laureatów w PSM I i II st. im. H. Melcera w Kaliszu
                     </div>
                 </div>
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
