--- a/rules.html
+++ b/rules.html
@@ -131,7 +131,7 @@
             <div data-aos="fade-right" data-aos-duration="1000" class="image-about-1">
                 <img class="img-kalisz-1 img-kalisz-2" src="slider-images/gallery1.webp" alt="city, kalisz, view" />
                 <div class="label-photo">
-                    The Winners' Concert at the Vienna Klaviergalerie, winners of the competition
+                    The Winners&#39; Concert the Henryk Melcer State Music School in Kalisz, winners of the competition.
                 </div>
             </div>
             <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
