--- a/polish-version-calisia-web/foto-festival24.html
+++ b/polish-version-calisia-web/foto-festival24.html
@@ -52,8 +52,7 @@
 
                         </ul>
                         <div class="languages">
-                            <a href="indexpl.html"><img class="img-flag"
-                                    src="slider-images/icons8-poland-48.png" /></a>
+                            <a href="indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
                             <a href="../index.html"><img class="img-flag"
                                     src="slider-images/icons8-great-britain-48.png" /></a>
                             <a href="../chinese-version/index-chinese.html"><img class="img-flag"
@@ -81,8 +80,7 @@
 
                         </ul>
                         <div class="languages-2">
-                            <a href="indexpl.html"><img class="img-flag"
-                                    src="slider-images/icons8-poland-48.png" /></a>
+                            <a href="indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
                             <a href="../index.html"><img class="img-flag"
                                     src="slider-images/icons8-great-britain-48.png" /></a>
                             <a href="../chinese-version/index-chinese.html"><img class="img-flag"
@@ -125,25 +123,13 @@
                 <p>Recital Łukasza Byrdy</p>
             </a>
 
-            <a class="image" href="/slider-images/lukasz-recital-festiwal.webp">
-                <img alt="img2" src="/slider-images/lukasz-recital-festiwal.webp" />
-                <p>Recital Łukasza Byrdy</p>
-            </a>
+
 
             <a class="image" href="/slider-images/raubo-festiwal-recital.webp">
                 <img alt="img2" src="/slider-images/raubo-festiwal-recital.webp" />
                 <p>Recital Zbigniewa Raubo</p>
             </a>
 
-            <a class="image" href="/slider-images/raubo-festiwal-recital.webp">
-                <img alt="img2" src="/slider-images/raubo-festiwal-recital.webp" />
-                <p>Recital Zbigniewa Raubo</p>
-            </a>
-
-            <a class="image" href="/slider-images/raubo-festiwal-recital.webp">
-                <img alt="img2" src="/slider-images/raubo-festiwal-recital.webp" />
-                <p>Recital Zbigniewa Raubo</p>
-            </a>
 
 
 
@@ -161,25 +147,16 @@
                 <img alt="img2" src="../slider-images/kurst-lukasz-festiwal.webp" />
                 <p>Kursy pianistyczne z dr Łukaszem Byrdy</p>
             </a>
-            <a class="image" href="../slider-images/kurst-lukasz-festiwal.webp">
-                <img alt="img2" src="../slider-images/kurst-lukasz-festiwal.webp" />
-                <p>Kursy pianistyczne z dr Łukaszem Byrdy</p>
-            </a>
 
-            <a class="image" href="../slider-images/kurst-lukasz-festiwal.webp">
-                <img alt="img2" src="../slider-images/kurst-lukasz-festiwal.webp" />
-                <p>Kursy pianistyczne z dr Łukaszem Byrdy</p>
-            </a>
+
+
 
             <a class="image" href="/slider-images/raubo-festiwal-lursy.webp">
                 <img alt="img2" src="/slider-images/raubo-festiwal-lursy.webp" />
                 <p>Kursy pianistyczne z prof. Zbigniewem Raubo</p>
             </a>
 
-            <a class="image" href="/slider-images/raubo-festiwal-lursy.webp">
-                <img alt="img2" src="/slider-images/raubo-festiwal-lursy.webp" />
-                <p>Kursy pianistyczne z prof. Zbigniewem Raubo</p>
-            </a>
+
         </div>
         <section id="footer" class="footer-wrapper text-center">
             <div class="container">
