--- a/polish-version-calisia-web/indexpl.html
+++ b/polish-version-calisia-web/indexpl.html
@@ -128,7 +128,7 @@
                                 class="fa fa-instagram"></i></a>
                     </div>
                     <p><span class="footer-s-1">&copy; 2025</span><span class="footer-span"> Calisia Arts
-                            Foundation</span></br><span class="footer-s-2">Natalia Byrdy Design</span></p>
+                            Foundation</span></br><span class="footer-s-2"></span></p>
                 </div>
             </div>
         </div>
