--- a/foto.html
+++ b/foto.html
@@ -91,7 +91,7 @@
     <div class="team-h">
       <h1 class="h1-team">Photo gallery</h1>
     </div>
-    <div class="main-festiwal margin-bez main3">
+    <div class="margin-bez main3 main-festiwal-korekta">
       <a href="rules.html" class="card card2">
         About competition 2023
       </a>
