--- a/jury.html
+++ b/jury.html
@@ -90,7 +90,7 @@
                     <h1 class="h1-team">Jury</h1>
                 </div>
 
-                <div class="main-festiwal margin-bez main3">
+                <div class="margin-bez main3 main-festiwal-korekta">
                     <a href="rules.html" class="card card2">
                         About competition 2023
                     </a>
