--- a/polish-version-calisia-web/artysci25.html
+++ b/polish-version-calisia-web/artysci25.html
@@ -89,10 +89,8 @@
                 <div class="team-h">
                     <h1 class="h1-team">Artyści</h1>
                 </div>
-                <div class="main-festiwal margin-bez main3">
-                    <a href="o-festiwalu25.html" class="card card2">
-                        O festiwalu 2025
-                    </a>
+                <div class="margin-bez2 margin-korekta">
+                 
                     <a href="program25.html" class="card card2">
                         Program
                     </a>
