--- a/polish-version-calisia-web/artysci25.html
+++ b/polish-version-calisia-web/artysci25.html
@@ -89,7 +89,7 @@
                 <div class="team-h">
                     <h1 class="h1-team">Artyści</h1>
                 </div>
-                <div class="margin-bez2 margin-korekta">
+                <div class="margin-korekta" style="margin-bottom: 30px;">
                  
                     <a href="program25.html" class="card card2">
                         Program
