--- a/rules.html
+++ b/rules.html
@@ -95,7 +95,7 @@
         <div class="team-h">
             <h1 class="h1-team"> 1st International Henryk Melcer Piano Competition</h1>
         </div>
-        <div class="main-festiwalmargin-bez wynik main-festiwal-new-new">
+        <div class="main-festiwal margin-bez wynik main-festiwal-new-new">
             <a href="rules.html" class="card card2">
                 About competition 2023
             </a>
