--- a/artysci25.html
+++ b/artysci25.html
@@ -91,10 +91,8 @@
             <div class="team-h">
                 <h1 class="h1-team">Artists</h1>
             </div>
-            <div class="main-festiwal margin-bez main3">
-                <a href="o-festiwalu25.html" class="card card2">
-                    About festival 2025
-                </a>
+            <div class="main-festiwal margin-bez main3" style="margin-bottom: 10px; height: 150px;">
+           
                 <a href="program25.html" class="card card2">
                     Program
                 </a>
