--- a/program25.html
+++ b/program25.html
@@ -104,10 +104,8 @@
             <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
                 <h1 class="h1-team">Program</h1>
             </div>
-            <div class="main-festiwal margin-bez2">
-                <a href="o-festiwalu25.html" class="card card2">
-                    About festival 2025
-                </a>
+            <div class="main-festiwal margin-bez2" style="margin-bottom: 5px;">
+             
                 <a href="artysci25.html" class="card padding-artysci">
                     Artists
                 </a>
