--- a/program25.html
+++ b/program25.html
@@ -150,7 +150,12 @@
                             <h3 style="margin: 20px 0 10px 0; font-size: 18px; color: #8B6E3E;">Program</h3>
                             <ul style="margin: 0; color: #ddd;">
                                 <li><em>Fryderyk Chopin</em></li> <br>
-                                <li><em>TBA</em></li>
+                                <li>Polonaise-Fantaisie in A-flat major, Op. 61</li>
+                                <li>Étude in G-sharp minor, Op. 25 No. 6</li>
+                                <li>Nocturne in B major, Op. 62 No. 1</li>
+                                <li>Waltz in E-flat major, Op. 18</li>
+                                <li>Barcarolle in F-sharp major, Op. 60</li>
+                                <li>Andante spianato and Grande Polonaise brillante in E-flat major, Op. 22</li>
                             </ul>
 
                             <!-- WYKONAWCA 2 – Jan Widlarz -->
