--- a/polish-version-calisia-web/program25.html
+++ b/polish-version-calisia-web/program25.html
@@ -244,7 +244,7 @@
                                 <li>Nokturn fis-moll, op. 48 nr 2</li>
                                 <li>Mazurki op. 33</li>
                                 <li>Fantazja f-moll, op. 49</li>
-                                <li>Polonez-Fantazja, op. 61</li>
+                                <li>Rondo à la mazur F-dur op. 5</li>
                             </ul>
 
                             <!-- WYKONAWCA 2 – Jan Widlarz -->
