--- a/program25.html
+++ b/program25.html
@@ -245,7 +245,7 @@
                                 <li>Nocturne in F-sharp minor, Op. 48 No. 2</li>
                                 <li>Mazurkas, Op. 33</li>
                                 <li>Fantasy in F minor, Op. 49</li>
-                                <li>Polonaise-Fantasy, Op. 61</li>
+                                <li>Rondo à la Mazur in F major, Op. 5</li>
 
                             </ul>
 
