--- a/polish-version-calisia-web/program25.html
+++ b/polish-version-calisia-web/program25.html
@@ -197,7 +197,11 @@
                             <h3 style="margin: 20px 0 10px 0; font-size: 18px; color: #8B6E3E;">Program</h3>
                             <ul style="margin: 0; color: #ddd;">
                                 <li><em>Fryderyk Chopin</em></li> <br>
-                                <li><em>Szczegóły wkrótce</em></li>
+                                <li>Rondo c-moll op. 1</li>
+                                <li>Preludia op. 28 nr 19–24</li>
+                                <li>Preludium cis-moll op. 45</li>
+                                <li>Walc cis-moll op. 64 nr 2</li>
+                                <li>Andante spianato i Wielki Polonez Es-dur op. 22</li>
                             </ul>
 
                             <!-- WYKONAWCA 2 – Jan Widlarz -->
