--- a/polish-version-calisia-web/program25.html
+++ b/polish-version-calisia-web/program25.html
@@ -291,12 +291,12 @@
                             <h3 style="margin: 20px 0 10px 0; font-size: 18px; color: #fff;">Program</h3>
                             <ul style="margin: 0; color: #ddd;">
                                 <li><em>Fryderyk Chopin</em></li> <br>
-                                <li>Nokturn cis moll op. 27</li>
-                                <li>Walc As - dur op. 34</li>
-                                <li>Ballada F dur op. 38</li>
+                                <li>Nokturn cis-moll op. 27</li>
+                                <li>Walc As-dur op. 34</li>
+                                <li>Ballada F-dur op. 38</li>
                                 <li>Mazurki op. 17</li>
-                                <li>Scherzo cis moll op. 39</li>
-                                <li>Polonez As dur op. 53</li>
+                                <li>Scherzo h-moll op.20</li>
+                                <li>Polonez As-dur op. 53</li>
                             </ul>
 
                             <!-- WYKONAWCA 2 – Jan Widlarz -->
