--- a/program25.html
+++ b/program25.html
@@ -298,7 +298,7 @@
                                 <li>Waltz in A-flat major, Op. 34</li>
                                 <li>Ballade in F major, Op. 38</li>
                                 <li>Mazurkas, Op. 17</li>
-                                <li>Scherzo in C-sharp minor, Op. 39</li>
+                                <li>Scherzo in B minor, Op. 20</li>
                                 <li>Polonaise in A-flat major, Op. 53</li>
                             </ul>
 
